--- a/Sklep/Sklep/Views/Shared/_Layout.cshtml
+++ b/Sklep/Sklep/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model Sklep.ViewModels.IndexViewModel
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,11 +11,11 @@
 <body>
     <header>
         <div id="menu">
-            <a href="fantasy.html">Fantasy</a>
-            <a href="horror.html">Horror</a>
-            <a href="komedie.html">Komedie</a>
-            <a href="sensacyjne.html">Sensacyjne</a>
-            <a href="thrillery.html">Thrillery</a>
+
+            @foreach (var category in Model.Categories)
+            {
+                <a href="@Url.Action("List", "Films", new { categoryName = category.Name })">@category.Name</a>
+            }
         </div>
     </header>
 
