--- a/Sklep/Sklep/Views/Shared/_Layout.cshtml
+++ b/Sklep/Sklep/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@model Sklep.ViewModels.IndexViewModel
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,13 +8,7 @@
 </head>
 <body>
     <header>
-        <div id="menu">
-
-            @foreach (var category in Model.Categories)
-            {
-                <a href="@Url.Action("List", "Films", new { categoryName = category.Name })">@category.Name</a>
-            }
-        </div>
+        @Html.Action("CategoriesMenu", "Films")
     </header>
 
     <div>
