--- a/Sklep/Sklep/Views/Home/Index.cshtml
+++ b/Sklep/Sklep/Views/Home/Index.cshtml
@@ -1,7 +1,27 @@
-﻿
+﻿@model Sklep.ViewModels.IndexLongestViewModel
+@using Sklep.Infrastructure
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
+<table border="1" style="background-color: burlywood">
+    <tr>
+        <td colspan="3">NAJDŁUŻSZE</td>
+    </tr>
+    <tr>
+        @foreach (var film in Model.LongestFilms)
+        {
+
+            <td><a href="@Url.Action("Details", "Films", new { id = film.FilmId })"><img src="@Url.GetFullImagePath(film.ImageName)" /></a></td>
+        }
+    </tr>
+    <tr>
+        @foreach (var film in Model.LongestFilms)
+        {
+            <td>@film.FilmLength min.</td>
+        }
+    </tr>
+
+</table>
