Poprawiono literówkę i usunięto pustą kategorię.

--- a/Sklep/Sklep/Views/Films/Details.cshtml
+++ b/Sklep/Sklep/Views/Films/Details.cshtml
@@ -19,7 +19,8 @@
                     <li>Tytuł: @Model.Title</li>
                     <li>Reżyser: @Model.Director</li>
                     <li>Opis: @Model.Desc</li>
-                    <li>Cena: @Model.Price</li>
+                    <li>Długość filmu: @Model.FilmLength min.</li>
+                    <li>Cena: @Model.Price PLN</li>
                     <li>Data dodania: @Model.AddDate</li>
                 </ul>
             </td>
