Dodano nawigację wraz z pakietem MvcSiteMapProvider

--- a/Sklep/Sklep/Views/Films/Details.cshtml
+++ b/Sklep/Sklep/Views/Films/Details.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Details";
 }
 
+@Html.MvcSiteMap().SiteMapPath()
+
 <div id="szczegoly">
     <table id="tableSzczegoly">
         <tr>
