--- a/Sklep/Sklep/Views/Films/List.cshtml
+++ b/Sklep/Sklep/Views/Films/List.cshtml
@@ -29,7 +29,7 @@
             <td><a href="@Url.Action("Details", "Films", new { id = film.FilmId })"><img src="@Url.GetFullImagePath(film.ImageName)" /></a></td>
             <td>@film.Title</td>
             <td>@film.Price PLN</td>
-            <td>Dodaj do koszyka</td>
+            <td><a href="@Url.Action("AddToCart", "Cart", new { id = film.FilmId })">&#128722;</a></td>
         </tr>
     }
 </table>
